welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:25: error: not found: value marquerSol
  marquerSol(c)
  ^PatternPicture:30: error: not found: value marquerSol
  marquerSol(c)
  ^PatternPicture:38: error: not found: value marquerSol
  marquerSol(c)
  ^PatternPicture:42: error: not found: value marquerSol
  marquerSol(c)
  ^